Fix option button z-indexes

--- a/www/css/routeBox.css
+++ b/www/css/routeBox.css
@@ -341,7 +341,7 @@
   width: 100%;
   box-sizing: border-box; /* Ensure padding is included in the width */
   position: relative;
-  z-index: 1999;
+  z-index: 100;
 }
 
 .travelers-dropdown-btn:hover,
